update httpUtil by tim